ajout objet Race + Type

--- a/ApiDuelMonster/Pages/Index.razor
+++ b/ApiDuelMonster/Pages/Index.razor
@@ -11,6 +11,8 @@
 {
 	<p>ID : @api.CurrentCarte.Id</p>
 	<p>Name : @api.CurrentCarte.Name</p>
+	<p>Race : @api.CurrentCarte.Race</p>
+	<p>Type : @api.CurrentCarte.Type</p>
 	<p>Description : @api.CurrentCarte.Desc</p>
 	<p><img src="@api.CurrentCarte.Image" alt="Carte" /></p>
 
